--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -86,7 +86,7 @@ body {
 	background: #f3f3f3;
 	color: rgb(119, 119, 119);
 	cursor: default;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, Arial;
 	font-size: 13px;
 	font-style: normal;
 	font-weight: normal;
@@ -112,7 +112,7 @@ p {
 }
 
 h1 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, Arial;
 	font-weight: 600;
 	font-size: 20pt;
 	font-style: normal;
@@ -123,7 +123,7 @@ h1 {
 }
 
 h2 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, Arial;
 	font-weight: 600;
 	font-size: 24pt;
 	font-style: normal;
@@ -133,7 +133,7 @@ h2 {
 }
 
 h3 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, Arial;
 	font-weight: 700;
 	font-size: 20pt;
 	font-style: normal;
@@ -143,7 +143,7 @@ h3 {
 }
 
 h4 {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif, 'PT Sans', Helvetica, Arial;
 	font-weight: 600;
 	font-size: 20pt;
 	font-style: normal;
