--- a/src/components/progress-semi-radial/progress-semi-radial.css
+++ b/src/components/progress-semi-radial/progress-semi-radial.css
@@ -30,3 +30,10 @@
 	line-height: 36px;
 }
 
+.progress-semi-radial .heading {
+	display: block;
+	font-size: 16px;
+	line-height: 19px;
+	text-transform: uppercase;
+}
+
